<resources>
    <string name="app_name">Easy Kanji</string>
    <string name="logo_name">Easy Kanji</string>
    <string name="slogan_name">We will help you to learn Kanji easier</string>
    <string name="powered_by">Powered by Easy Kanji Team</string>


    <!-- String for on Boarding Screen -->
    <!-- Tittle -->
    <string name="intro_slide_title"></string>
    <string name="first_slide_title"></string>
    <string name="second_slide_title"></string>
    <string name="third_slide_title"></string>

    <!-- Description -->
    <string name="intro_slide_desc"></string>
    <string name="first_slide_desc">You can learn in three different ways choose what works for you</string>
    <string name="second_slide_desc">Quicky search Kanji by Hiragana and Sino-Vietnamese Reading</string>
    <string name="third_slide_desc">Join the test to reach the first place</string>

    <!-- Button -->
    <string name="btn_skip">Skip</string>
    <string name="btn_next">Next</string>
    <string name="let_get_started">Get Started</string>
    <string name="btn_signin_with_google">Sign in with google</string>
    <string name="btnSignin">Sign in</string>
    <string name="btnSignup">Sign up</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_cf_password">Confirm password</string>
    <string name="text_divider">OR</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_dont_have_an_account">Don\' have an account?</string>
    <string name="text_signup">Sign up</string>
    <string name="btn_signin_with_facebook">Sign in with Facebook</string>

<!--    Kanji Detail-->
    <string name="title_kanji_detail_remember">Ghi nhớ</string>
    <string name="title_kanji_detail_china_mean">Âm hán</string>
    <string name="title_kanji_detail_viet_mean">Nghĩa</string>
    <string name="title_kanji_detail_onjomi">Onyomi</string>
    <string name="title_kanji_detail_kunjomi">Kunyoomi</string>
    <string name="title_kanji_detail_example">Ví dụ</string>
    <string name="title_kanji_basic">Kanji cơ bản</string>
</resources>
