<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app04">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/backgroundImage2"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:src="@drawable/logo_text_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_28"
            android:text="@string/btnSignin"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_custom"
            app:layout_constraintBottom_toTopOf="@id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/text_dont_have_an_account"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvSignup"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_36"
            android:text="@string/text_signup"
            android:textColor="@color/color_blue_500"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
