<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:nestedScrollingEnabled="true">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:background="@drawable/ic_arrow_back"
        android:backgroundTint="@android:color/white"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_back"
        android:translationZ="@dimen/dp_8"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/imageLogo"
        app:layout_constraintTop_toTopOf="@id/imageLogo"
        tools:src="@drawable/ic_arrow_back" />

    <Button
        android:id="@+id/buttonSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/bg_ripple"
        android:text="@string/btnSignin"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputPassword" />



    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="416dp"
        android:layout_height="166dp"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_image2"
        tools:ignore="ContentDescription" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuildLine"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="226dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuildLine"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuildLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>